<resources>
    <string name="app_name">SensorFingerprint</string>
    <string name="app_version">v1.2</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_button_text">Settings</string>
    <string name="start_button_text">Start</string>
    <string name="stop_button_text">Stop</string>
    <string name="statistics_button_text">Statistics</string>
    <string name="select_map_button_text">Select Map</string>
    <string name="select_map_dialog_title">Wipe Fingerprints?</string>
    <string name="select_map_dialog_msg">Selecting a new map will delete all recorded fingerprints.</string>
    <string name="select_map_dialog_positive">OK</string>
    <string name="select_map_dialog_negative">Cancel</string>
    <string name="map_path_preview_text">Map path...</string>
    <string name="reset_seen_button_text">Reset Seen State</string>
    <string name="export_button_text">Export</string>
    <string name="filter_by_map">Filter by map</string>
    <string name="recover_temporary_fingerprint_title">Recover Fingerprint?</string>
    <string name="recover_temporary_fingerprint_msg">Do you want to recover:</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="event_count_txt">%1$d evts</string>

    <string name="prefActiveSensors">Active Sensors</string>
    <string name="prefActiveSensorsSummary">Choose the sensors included in the recording</string>
    <string-array name="prefActiveSensorsEntries">
        <item>GPS</item>
        <item>WiFi</item>
        <item>WiFi RTT Scan</item>
        <item>Bluetooth</item>
        <item>Phone (Accel, Gyro, Magnet)</item>
        <item>Heading Change</item>
        <item>Step Detector</item>
        <item>Decawave UWB</item>
    </string-array>
    <string-array name="prefActiveSensorsValues">
        <item>GPS</item>
        <item>WIFI</item>
        <item>WIFIRTTSCAN</item>
        <item>BLUETOOTH</item>
        <item>PHONE</item>
        <item>HEADING_CHANGE</item>
        <item>STEP_DETECTOR</item>
        <item>DECAWAVE_UWB</item>
    </string-array>
    <string-array name="prefActiveSensorsDefault">
        <item>GPS</item>
        <item>WIFI</item>
        <item>BLUETOOTH</item>
        <item>PHONE</item>
        <item>HEADING_CHANGE</item>
        <item>STEP_DETECTOR</item>
    </string-array>

    <string name="prefFingerprintDurationSummary">Duration of the recording of one fingerprint (ms). 0 for infinitely long recordings.</string>
    <string name="prefFingerprintDurationTitle">Duration of the recording (ms)</string>
    <string name="prefFtmBurstSizeSummary">Number of measurement packets per burst. 0 for default of device.</string>
    <string name="prefFtmBurstSizeTitle">FTM burst size</string>
    <string name="btnMode_description">fingerprint moe</string>
    <string name="dialog_create_fingerprint_label_x">X:</string>
    <string name="dialog_create_fingerprint_label_y">Y:</string>
    <string name="dialog_create_fingerprint_label_z">Z:</string>
    <string name="dialog_create_fingerprint_label_floorname">Floor name:</string>
    <string name="dialog_create_fingerprint_label_name">Name:</string>
    <string name="dialog_create_fingerprint_title">Create Fingerprint</string>
    <string name="dialog_create_fingerprint_create">Create</string>
    <string name="dialog_create_fingerprint_cancel">Cancel</string>
    <string name="start_button_text_warm_up">Warm Up</string>
    <string name="start_button_text_gt">"GT %1$d/%2$d"</string>
    <string name="stop_button_text_gt">Stop %1$d/%2$d</string>
</resources>